[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cachitool"
version = "0.0.1"
dependencies = [
    "beautifulsoup4",
    "gitpython",
    "packaging",
    "piprepo",
    "pydantic",
    "requests",
    "setuptools",
]
requires-python = ">=3.10"

[project.scripts]
cachitool = "cachitool.main:main"

[tool.pylint.disable]
disable=[
    "C",
    "R",
    "W0107",
    "W0707",
    "W1203",
]
